# session-state-explorer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/examples/: README.md  example_project.rpp  make_example_data.py  placeholder.md
docs/: demo_script.md  research_context.md
src/session_state_explorer/: __init__.py  app.py  audio_descriptors.py  essentia_adapter.py  export.py  fingerprint.py  graph_builder.py  mixer.py  models.py  recommendations.py  rpp_parser.py  utils.py  visualization.py
src/session_state_explorer/canonical_export/: cli.py  exporter.py
tests/: test_canonical_roundtrip.py  test_export_bundle.py  test_fingerprint.py  test_graph_builder.py  test_mixer.py  test_recommendations.py  test_rpp_parser.py
